--- a/7_web_socket/src/index.html
+++ b/7_web_socket/src/index.html
@@ -8,6 +8,7 @@
     <h1>Real-Time Chat Box Using WebSocket</h1>
     <div id="messages"></div>
     <div class="input-container">
+        <input type="text" id="nameInput" placeholder="Your name">
         <input 
             type="text" 
             id="messageInput" 
@@ -15,6 +16,7 @@
             autocomplete="off"
         />
         <button onclick="sendMessage()">Send</button>
+        
     </div>
 
     <script>
@@ -30,7 +32,8 @@
 
             socket.addEventListener("message", (event) => {
                 console.log("Received message:", event.data);
-                appendMessage(event.data);
+                const { name, message } = JSON.parse(event.data);
+                appendMessage(name, message);
             });
 
             socket.addEventListener("close", () => {
@@ -45,11 +48,11 @@
             });
         }
 
-        function appendMessage(message, isSystem = false) {
+        function appendMessage(username = '', message, isSystem = false) {
             const messagesDiv = document.getElementById("messages");
             const messageElement = document.createElement("div");
             messageElement.className = `message ${isSystem ? 'system' : ''}`;
-            messageElement.textContent = message;
+            messageElement.textContent = `${isSystem ? '': `${username}:`} ${message}`;
             messagesDiv.appendChild(messageElement);
             messagesDiv.scrollTop = messagesDiv.scrollHeight;
         }
@@ -57,9 +60,15 @@
         function sendMessage() {
             const messageInput = document.getElementById("messageInput");
             const message = messageInput.value.trim();
+
+            const nameInput = document.getElementById("nameInput");
+            const name = nameInput.value.trim();
             
             if (message && socket && socket.readyState === WebSocket.OPEN) {
-                socket.send(message);
+                socket.send(JSON.stringify({
+                    name: name,
+                    message: message,
+                }));
                 messageInput.value = "";
             }
         }
